Added stylesheet for (future) hover previews

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
-  <body>
+<head>
+  <style type="text/css">
+    .thumbnail {
+      position: relative;
+      z-index: 0;
+    }
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+    .thumbnail:hover {
+      background-color: transparent;
+      z-index: 50;
+    }
 
-  </body>
+    .thumbnail span {
+      /*CSS for enlarged image*/
+      position: absolute;
+      background-color: lightyellow;
+      padding: 5px;
+      left: -1000px;
+      border: 1px dashed gray;
+      visibility: hidden;
+      color: black;
+      text-decoration: none;
+    }
+
+    .thumbnail span img {
+      /*CSS for enlarged image*/
+      border-width: 0;
+      padding: 2px;
+    }
+
+    .thumbnail:hover span {
+      /*CSS for enlarged image on hover*/
+      visibility: visible;
+      top: 0;
+      right: 60px;
+      /*position where enlarged image should offset horizontally */
+
+    }
+  </style>
+</head>
+
+<body>
+  <main class="page-content" aria-label="Content">
+    <div class="wrapper">
+      {{ content }}
+    </div>
+  </main>
+</body>
 
 </html>
