--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,31 +13,21 @@
       z-index: 50;
     }
 
-    .thumbnail span {
+    .thumbnail img {
       /*CSS for enlarged image*/
-      position: absolute;
-      background-color: lightyellow;
-      padding: 5px;
-      left: -1000px;
-      border: 1px dashed gray;
+      border-width: 0;
+      padding: 2px;
       visibility: hidden;
       color: black;
       text-decoration: none;
     }
 
-    .thumbnail span img {
-      /*CSS for enlarged image*/
-      border-width: 0;
-      padding: 2px;
-    }
-
-    .thumbnail:hover span {
+    .thumbnail:hover img {
       /*CSS for enlarged image on hover*/
       visibility: visible;
       top: 0;
       right: 60px;
       /*position where enlarged image should offset horizontally */
-
     }
   </style>
 </head>
