--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,16 @@
 <html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-{% seo %}
-<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-<script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
-<meta name="viewport" content="width=device-width">
-{% if page.layout == "sekai" %}
-{% include sekai.html %}
-{% endif %}
-{% include head-custom.html %}
+  {% seo %}
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+  <meta name="viewport" content="width=device-width">
+  {% if layout.includeList %}
+  {% for item in {{layout.includeList | sort}} %}
+  {% include {{item}} %}
+  {% endfor %}
 </head>
 
 <body>
@@ -19,34 +19,16 @@
     <header>
       <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
       <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
-    
-      <ul>
-        {% if site.show_downloads %}
-        <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
-        <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
-        {% endif %}
-        <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
-      </ul>
-    
-      {% if site.github.is_project_page %}
-      <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{
-          site.github.owner_name }}</a></p>
-      {% endif %}
-    
-      {% if site.github.is_user_page %}
+
       <ul>
         <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
       </ul>
-      {% endif %}
     </header>
-    
+
     <section>
-        {{ content }}
+      {{ content }}
       </section>
-      
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
-    </div>
+  </div>
   </body>
+
 </html>
