--- a/_includes/sekai.html
+++ b/_includes/sekai.html
@@ -5,12 +5,11 @@
         "Accept": "application/json"
       },
       method: "GET",
-      mode: "no-cors",
       referrerPolicy: "no-referrer"
           };
-          const cardsFetch = (fetch("https://raw.githubusercontent.com/Sekai-World/sekai-master-db-diff/main/cards.json", JSONfetchInit).then((response) => response.json()));
-          const eventsFetch = (fetch("https://raw.githubusercontent.com/Sekai-World/sekai-master-db-diff/main/events.json", JSONfetchInit).then((response) => response.json()));
-          const gachasFetch = (fetch("https://raw.githubusercontent.com/Sekai-World/sekai-master-db-diff/main/gachas.json", JSONfetchInit).then((response) => response.json()));
+              const cardsFetch = fetch("https://raw.githubusercontent.com/Sekai-World/sekai-master-db-diff/main/cards.json", JSONfetchInit).then((response) => { return response.json() });
+              const eventsFetch = fetch("https://raw.githubusercontent.com/Sekai-World/sekai-master-db-diff/main/events.json", JSONfetchInit).then((response) => { return response.json() });
+              const gachasFetch = fetch("https://raw.githubusercontent.com/Sekai-World/sekai-master-db-diff/main/gachas.json", JSONfetchInit).then((response) => { return response.json() });
           const cardArtBase = "https://storage.sekai.best/sekai-assets/character/member/";
 
       function DOMReady() {
