how is this not iterable

--- a/_includes/sekai.html
+++ b/_includes/sekai.html
@@ -1,2 +1,2 @@
 <script async defer blocking="render" src="{{ 'assets/js/sekai.js' | relative_url }}"></script>
-<link blocking="render" href="{{ 'assets/css/sekai.css' | relative_url }}" rel="stylesheet" />
+<link blocking="render" href="{{ 'assets/styles/sekai.css' | relative_url }}" rel="stylesheet" />
